fix(css): fix the color for scrollbar thumb in code blocks

--- a/src/index.css
+++ b/src/index.css
@@ -531,7 +531,7 @@ a.circle-button:hover {
 
 .figure-body > pre::-webkit-scrollbar-thumb {
   background-clip: padding-box;
-  background-color: var(--gray-8);
+  background-color: var(--gray-6);
   border: 2px solid transparent;
 }
 
